# otus-cpp-basics

./: README.md
03.homework_files/: CMakeLists.txt  index.cpp
03.homework_files/include/: inter.h  random.h  slovar_resultatov.h
03.homework_files/src/: index.cpp  inter.cpp  random.cpp  slovar_resultatov.cpp
04. homework/include/: add.hpp  div.hpp  lexer.hpp  mul.hpp  number.hpp  sub.hpp  variable.hpp
04. homework/src/: lexer.cpp  main.cpp  parser.cpp
05. homework/: CMakeLists.txt  max.cpp  mean.cpp  min.cpp  pct90.cpp  pct95.cpp
05. homework/include/: max.h  mean.h  min.h  pct.h  stat.h  std.h
05. homework/src/: main.cpp  max.cpp  mean.cpp  min.cpp  pct.cpp  stat.cpp  std.cpp
06. homework/: CMakeLists.txt  bidirectional_list.cpp  main.cpp  serial_container.cpp  unidirectional_list.cpp
Hello_GitHub1/: CMakeLists.txt  Hello_GitHub.cpp
Home_Work_2/: hello_world.cpp  todo_move_me_out.cpp
homework4/: CMakeLists.txt  main.cpp  std.cpp
